third_party/WebKit/Source/core/html/shadow/MediaControlsOrientationLockDelegate.h
@@ -43,6 +43,15 @@ class CORE_EXPORT MediaControlsOrientationLockDelegate final
  public:
   explicit MediaControlsOrientationLockDelegate(HTMLVideoElement&);
 
+  // Called by MediaControls when the HTMLMediaElement is added to a document
+  // document. All event listeners should be added.
+  void attach();
+
+  // Called by MediaControls when the HTMLMediaElement is no longer in the
+  // document. All event listeners should be removed in order to prepare the
+  // object to be garbage collected.
+  void detach();
+
   // EventListener implementation.
   bool operator==(const EventListener&) const override;
 
